--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,12 @@
 			background: #e5e5e5;
 			min-height: 100vh;
 		}
+		#log {
+			background: #f5f5f5;
+			margin-bottom: 10px;
+			padding: 10px;
+			overflow: scroll !important;
+		}
 	</style>
 	<script type = "text/javascript" src = "/assets/qcode-decoder.min.js"></script>
 	<script type = "text/javascript" src = "/assets/main.js"></script>
@@ -21,7 +27,6 @@
   <div class="nav-right nav-menu">
    <a class="nav-item">Successful entries: <span id = "successful-entries">0</span></a>
     <a class="nav-item">Total entries: <span id = "total-entries">0</span></a>
-    <a class="nav-item">Scanned teams: <span id = "teams">0</span></a>
     <a class="nav-item">v<span id = "version">0</span></a>
   </div>
 </nav>
@@ -35,9 +40,11 @@
 			<div class = "column">
 				<h1 class = "title">Scan Log</h1>
 				<p class = "control">
-					<textarea id = "log" disabled class = "textarea"></textarea>
+					<div id = "log" disabled = "true">
+					</div>
 				</p>
 				<a class = "button is-danger" onclick = "document.getElementById('log').value = ''">Clear</a>
+				<a class = "button is-primary" onclick = "submit('1991, 12, 0, Never entered, 0, 0, 0, 0, 0, 4, 0, ')">Test</a>
 			</div>
 		</div>
 	</div>
