Updated script so it doesn't break

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
 					<div id = "log" disabled = "true">
 					</div>
 				</p>
-				<a class = "button is-danger" onclick = "document.getElementById('log').value = ''">Clear</a>
+				<a class = "button is-danger" onclick = "document.getElementById('log').innerHTML = ''">Clear</a>
 				<a class = "button is-primary" onclick = "submit('1991, 12, 0, Never entered, 0, 0, 0, 0, 0, 4, 0, ')">Test</a>
 			</div>
 		</div>
